--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,11 +2,13 @@
   class="mx-auto flex h-[4.5rem] max-w-(--w) px-8 whitespace-nowrap lg:justify-center"
 >
   <div class="relative z-50 flex items-center ltr:mr-auto rtl:ml-auto">
-    <a
-      class="-translate-y-[1px] text-2xl font-medium"
-      href="{{- `` | absURL -}}"
-      >{{ site.Title }}</a
-    >
+    <div class="site-title">
+      <a
+        class="-translate-y-[1px] text-2xl font-medium"
+        href="{{- `` | absURL -}}">
+        <div id="typewriter"></div>
+        </a>
+      </div>
     <div
       class="btn-dark text-[0px] ltr:ml-4 rtl:mr-4 h-6 w-6 shrink-0 cursor-pointer {{ if site.Params.monoDarkIcon }}[background:url(./theme.svg)_left_center/cover_no-repeat] dark:invert{{ else }}[background:url(./theme.png)_left_center/_auto_theme('spacing.6')_no-repeat] [transition:_background-position_0.4s_steps(5)]{{ end }} dark:[background-position:right]"
       role="button"
@@ -102,3 +104,23 @@
     {{- end -}}<!---->
   </div>
 </header>
+
+  {{- if and $.IsHome }}
+  <script>
+  const typewriter = new Typewriter('#typewriter', {
+      loop: false,
+    });
+  typewriter.typeString({{site.Title}});
+  typewriter.pauseFor(2000);
+  typewriter.typeString(".net")
+  typewriter.start();
+</script>
+{{- else -}}
+<script>
+  const typewriter = new Typewriter('#typewriter', {
+      loop: false,
+    });
+  typewriter.typeString({{site.Title}} + ".net");
+  typewriter.start();
+</script>
+{{end -}}
