Add Umami tracker

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,13 +1,5 @@
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D89WGKNYCL"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-D89WGKNYCL');
-  </script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="5ed324d3-01fb-4ae2-baac-5d67cf973955"></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta
